--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/app.css">
-
+  <link rel="icon" href="../src/img/Logo_TECNM.png" type="image/x-icon">
   <title>CuerBook</title>
 </head>
 
