--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="icon" href="../src/img/Logo_TECNM.png" type="image/x-icon">
+  <link rel="icon" href="/img/cuerbook_img.jpg" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <title>CuerBook</title>
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
